--- a/ftask/i18n/translations/en/LC_MESSAGES/messages.po
+++ b/ftask/i18n/translations/en/LC_MESSAGES/messages.po
@@ -3,13 +3,12 @@
 # This file is distributed under the same license as the PROJECT project.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2013.
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2013-09-04 22:33+0200\n"
-"PO-Revision-Date: 2013-09-05 01:16+0200\n"
+"POT-Creation-Date: 2013-09-05 22:15+0200\n"
+"PO-Revision-Date: 2013-09-05 22:25+0200\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: en <LL@li.org>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
@@ -17,6 +16,86 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 1.3\n"
+
+#: interface/board/templates/board/filter.html:18
+msgid "Filter by"
+msgstr "Filter by"
+
+#: interface/board/templates/board/filter.html:20
+msgid "Due date"
+msgstr "Due date"
+
+#: interface/board/templates/board/filter.html:25
+msgid "Options"
+msgstr "Options"
+
+#: interface/board/templates/board/filter.html:29
+msgid "Expand to all the board"
+msgstr "Expand to all the board"
+
+#: interface/board/templates/board/filter.html:31
+msgid "Return to board view"
+msgstr "Return to board view"
+
+#: interface/board/templates/board/filter.html:68
+msgid "Remove from board"
+msgstr "Remove from board"
+
+#: interface/board/templates/board/filter.html:88
+msgid "Overdue tasks"
+msgstr "Overdue tasks"
+
+#: interface/board/templates/board/filter.html:89
+msgid "To be closed today"
+msgstr "To be closed today"
+
+#: interface/board/templates/board/filter.html:90
+msgid "To be closed this week"
+msgstr "To be closed this week"
+
+#: interface/board/templates/board/filter.html:91
+msgid "All tasks in list"
+msgstr "All tasks in list"
+
+#: interface/board/templates/board/filter.html:93
+msgid "Show tasks between"
+msgstr "Show tasks between"
+
+#: interface/board/templates/board/filter.html:95
+msgid "and"
+msgstr "and"
+
+#: interface/board/templates/board/filter.html:100
+msgid "Deadlines quick report"
+msgstr "Deadlines quick report"
+
+#: interface/board/templates/board/list.html:13
+msgid "New Board"
+msgstr "New Board"
+
+#: interface/board/templates/board/list.html:18
+msgid "Board name"
+msgstr "Board name"
+
+#: interface/board/templates/board/list.html:21
+msgid "Add"
+msgstr "Add"
+
+#: interface/board/templates/board/list.html:27
+msgid "Close"
+msgstr "Close"
+
+#: interface/board/templates/board/list.html:32
+msgid "My Boards"
+msgstr "My Boards"
+
+#: interface/board/templates/board/list.html:33
+msgid "New board..."
+msgstr "New board..."
+
+#: interface/board/templates/board/list.html:40
+msgid "Shared with me"
+msgstr "Shared with me"
 
 #: templates/base.html:99
 msgid ""
@@ -35,10 +114,15 @@ msgid ""
 msgstr ""
 "\n"
 "                Powered by <a href=\"http://python.org\">Python</a>,\n"
-"                           <a href=\"http://flask.pocoo.org/\">Flask</a>,\n"
-"                           <a href=\"http://backbonejs.org/\">Backbone</a>,\n"
-"                           <a href=\"http://http://twitter.github.com/bootstrap/\">Twitter Bootstrap</a>\n"
-"                <br>Licenced under AGPLv3, get the <a href=\"https://github.com/wadobo/Ftask\">code</a>\n"
+"                           <a href=\"http://flask.pocoo.org/\">Flask</a>,"
+"\n"
+"                           <a "
+"href=\"http://backbonejs.org/\">Backbone</a>,\n"
+"                           <a "
+"href=\"http://http://twitter.github.com/bootstrap/\">Twitter "
+"Bootstrap</a>\n"
+"                <br>Licenced under AGPLv3, get the <a "
+"href=\"https://github.com/wadobo/Ftask\">code</a>\n"
 "\t      "
 
 #: templates/base.html:108
