--- a/ftask/i18n/translations/es/LC_MESSAGES/messages.po
+++ b/ftask/i18n/translations/es/LC_MESSAGES/messages.po
@@ -3,13 +3,12 @@
 # This file is distributed under the same license as the PROJECT project.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2013.
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2013-09-04 22:33+0200\n"
-"PO-Revision-Date: 2013-09-05 01:15+0200\n"
+"POT-Creation-Date: 2013-09-05 22:15+0200\n"
+"PO-Revision-Date: 2013-09-05 22:25+0200\n"
 "Last-Translator: Mateo Matachana López <matachana.mateo@gmail.com>\n"
 "Language-Team: es <LL@li.org>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
@@ -17,6 +16,86 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 1.3\n"
+
+#: interface/board/templates/board/filter.html:18
+msgid "Filter by"
+msgstr "Filtrar por"
+
+#: interface/board/templates/board/filter.html:20
+msgid "Due date"
+msgstr "Fecha límite"
+
+#: interface/board/templates/board/filter.html:25
+msgid "Options"
+msgstr "Opciones"
+
+#: interface/board/templates/board/filter.html:29
+msgid "Expand to all the board"
+msgstr "Expandir a toda la carpeta"
+
+#: interface/board/templates/board/filter.html:31
+msgid "Return to board view"
+msgstr "Volver a la vista de carpeta"
+
+#: interface/board/templates/board/filter.html:68
+msgid "Remove from board"
+msgstr "Eliminar de la carpeta"
+
+#: interface/board/templates/board/filter.html:88
+msgid "Overdue tasks"
+msgstr "Tareas retrasadas"
+
+#: interface/board/templates/board/filter.html:89
+msgid "To be closed today"
+msgstr "Para cerrarse hoy"
+
+#: interface/board/templates/board/filter.html:90
+msgid "To be closed this week"
+msgstr "Para cerrarse esta semana"
+
+#: interface/board/templates/board/filter.html:91
+msgid "All tasks in list"
+msgstr "Todas las tareas en la lista"
+
+#: interface/board/templates/board/filter.html:93
+msgid "Show tasks between"
+msgstr "Mostrar tareas entre"
+
+#: interface/board/templates/board/filter.html:95
+msgid "and"
+msgstr "y"
+
+#: interface/board/templates/board/filter.html:100
+msgid "Deadlines quick report"
+msgstr "Informe rápido de fechas límite"
+
+#: interface/board/templates/board/list.html:13
+msgid "New Board"
+msgstr "Nueva carpeta"
+
+#: interface/board/templates/board/list.html:18
+msgid "Board name"
+msgstr "Nombre de carpeta"
+
+#: interface/board/templates/board/list.html:21
+msgid "Add"
+msgstr "Añadir"
+
+#: interface/board/templates/board/list.html:27
+msgid "Close"
+msgstr "Cerrar"
+
+#: interface/board/templates/board/list.html:32
+msgid "My Boards"
+msgstr "Mis carpetas"
+
+#: interface/board/templates/board/list.html:33
+msgid "New board..."
+msgstr "Nueva carpeta..."
+
+#: interface/board/templates/board/list.html:40
+msgid "Shared with me"
+msgstr "Compartidos conmigo"
 
 #: templates/base.html:99
 msgid ""
@@ -38,7 +117,8 @@ msgstr ""
 "<a href=\"http://backbonejs.org\">Backbone</a>,\n"
 "y <a href=\"http://twitter.github.io/bootstrap/\">Twitter Bootstrap</a>\n"
 "\n"
-"<b>Licenciado bajo los términos de la AGPLv3, obtén el <a href=\"https://github.com/wadobo/Ftask\">código</a>\n"
+"<b>Licenciado bajo los términos de la AGPLv3, obtén el <a "
+"href=\"https://github.com/wadobo/Ftask\">código</a>\n"
 "\n"
 "\n"
 
